# Keylogger-Detection-Toolkit

./: README.md  __main__.py  pyproject.toml  simulator.py
Keylogger-Detection/: __init__.py  cli.py  report.py  scanner.py
Tests/: test_report.py  test_scanner.py  test_simulator.py
