[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "keylogger-detection"
version         = "2.0.0"
description     = "Educational keylogger detection & consent-based simulator toolkit"
readme          = "README.md"
license         = { file = "LICENSE.txt" }
requires-python = ">=3.10"
authors         = [{ name = "Akash Kumar" }]
keywords        = ["cybersecurity", "keylogger", "detection", "educational", "defensive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = ["psutil>=5.9"]

[project.scripts]
keylogger-detection = "keylogger_detection.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["keylogger_detection*"]
